force-app/main/default/objects/building_lead__c/building_lead__c.object-meta.xml
<CustomObject>
    <description>Related Building with Leads</description>
    <label>Building-Tenant Old</label>
    <nameField>
        <label>Building-Tenant Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Building-Tenants Old</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>