force-app/main/default/objects/building_lead__c/fields/BL_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>BL_Company_Name__c</fullName>
    <formula>Building_Lead__r.Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>