force-app/main/default/objects/building_lead__c/fields/BL_LCD__c.field-meta.xml
<CustomField>
    <fullName>BL_LCD__c</fullName>
    <formula>Building_Lead__r.LCD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LCD</label>
    <type>Date</type>
</CustomField>