force-app/main/default/objects/building_lead__c/fields/BL_LEXP__c.field-meta.xml
<CustomField>
    <fullName>BL_LEXP__c</fullName>
    <formula>Building_Lead__r.LEXP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LEXP</label>
    <type>Date</type>
</CustomField>