force-app/main/default/objects/building_lead__c/fields/BL_RSF__c.field-meta.xml
<CustomField>
    <fullName>BL_RSF__c</fullName>
    <formula>Building_Lead__r.RSF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>