force-app/main/default/objects/building_lead__c/fields/BL_Suite_Floor__c.field-meta.xml
<CustomField>
    <fullName>BL_Suite_Floor__c</fullName>
    <formula>Building_Lead__r.Suite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suite/Floor</label>
    <type>Text</type>
</CustomField>