force-app/main/default/objects/building_lead__c/fields/Building_BL__c.field-meta.xml
<CustomField>
    <fullName>Building_BL__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Building - Lead</description>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipName>building_leads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>