force-app/main/default/objects/building_lead__c/fields/Building_Lead__c.field-meta.xml
<CustomField>
    <fullName>Building_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Building</description>
    <label>Tenant</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>building_leads</relationshipName>
    <type>Lookup</type>
</CustomField>